# Dataset-Tools

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  _version.py  dataset-fixed.py  dataset-tool-enhanced.py  dataset-tool-simple.py  dataset-viewer-stable.py  dataset_tool_enhanced.py  main.py  main_dev.py  main_old_Jun15_2024.py  metadata_parser.py  pyproject.toml  requirements.txt  test_md_ps.py  ui.py  widgets.py
.github/workflows/: codacy.yml  greetings.yml  stale.yml
dataset_tools/: __init__.py  main.py  metadata_parser.py  test_md_ps.py  ui.py  widgets.py
future toys/: themed-viewer-setup.py
old files for reference/: complete-stable-viewer.py
src/: main.py
src/logging/: __init__.py
src/themes/: __init__.py
src/ui/: __init__.py  file_tree.py  image_grid.py  main_window.py  metadata_panel.py
src/utils/: __init__.py
